--- a/school/elec_313/lab3/tex/report.tex
+++ b/school/elec_313/lab3/tex/report.tex
@@ -90,16 +90,15 @@ The objective is to construct, measure, and observe the behavior of two common d
 \section{Procedure}
 \label{sec:procedure}
 
-\subsection{Rectifier}
+\subsection{Voltage Rectifier}
 \label{sec:rectifier}
 
-First, the capacitance of a 1 microfarad capacitor was measured and that measurement, along with its \% difference (from the nominal) value, was recorded in Table~\ref{tab:cap}. Then the circuit shown in Figure~\ref{fig:volt_rect} was constructed on a breadboard. The voltage source ($V_S$) and \SI{50}{\ohm} resistor seen in Figure~\ref{fig:volt_rect} represented the function generator used.  Using a resistive decade box, the load resistance ($R_L$) was initially set to \SI{10}{\kilo\ohm}. Then, the first channel of the oscilloscope was set to measure the output of the function generator and the second channel was set to measure the voltage across the load ($V_L$). The function generator was programmed to produce a sine wave at 400 Hz with a peak voltage of 1 V, which was measured with the ($V_{pk}$) function on the oscilloscope. The dc voltage ($V_{DC}$) across $V_L$ was additionally measured with a multi-meter and recorded in Table~\ref{tab:rect_vp_vdc}. The Vmax and Vmin voltages were measured across $V_L$ and recorded in Table~\ref{tab:rect_vp_vdc}. The ripple voltage $V_r$ was determined and also recorded in Table~\ref{tab:rect_vp_vdc}. This process was repeated 4 more times by adjusting the $V_S$ to peak amplitudes of 2, 3, 4, and finally 5 volts, and each time the dc voltage, $V_{max}$ and $V_{min}$, and $V_r$ were measured and recorded in Table~\ref{tab:rect_vp_vdc}. Finally, the source voltage was then left at 5 $V_{pk}$, and the $R_L$ was adjusted to \SI{1}{\kilo\ohm} and \SI{100}{\kilo\ohm} and each $V_{DC}$, $V_{max}$, $V_{min}$, and $V_r$ were measured and recorded in Table~\ref{tab:load_v_ripple}.
+First, the capacitance of a \SI{1}{\micro\farad} capacitor was measured and  recorded in Table~\ref{tab:cap} along with the percent difference calculated (Eq~\label{eq:percent_diff}).  Then the circuit shown in Figure~\ref{fig:volt_rect} was constructed on a breadboard. The voltage source ($V_S$) and \SI{50}{\ohm} resistor seen in Figure~\ref{fig:volt_rect} represented the function generator used.  Using a resistive decade box, the load resistance ($R_L$) was initially set to \SI{10}{\kilo\ohm}.  Then, the first channel of the oscilloscope was set to measure the output of the function generator and the second channel was set to measure the voltage across the load ($V_L$).  The function generator was programmed to produce a sine wave of \SI{1}{V_{peak}} at \SI{400}{\hertz}, measured with the oscilloscope.  $V_{max}$, $V_{min}$, and DC voltage across $V_L$ was measured with a multimeter and recorded in Table~\ref{tab:rect_vp_vdc} along with the ripple voltage $V_r$ (Eq~\ref{eq:ripple}).  Finally, the source voltage was then left at \SI{5}{V_{peak}}, and $R_L$ was adjusted to \SI{1}{\kilo\ohm} and \SI{100}{\kilo\ohm} and each $V_{DC}$, $V_{max}$, $V_{min}$, and $V_r$ were measured and recorded in Table~\ref{tab:load_v_ripple}.
 
 \subsection{Voltage Regulator}
 \label{sec:volt_reg}
 
-First, a \SI{47}{\ohm} resistor was measured and its \% difference from the nominal resistance value was calculated and both values were recorded in Table~\ref{tab:res}. The circuit shown in Figure~\ref{fig:volt_reg} was constructed on a breadboard using a 1N5231B for the Zener diode, the HP power supply for the voltage source ($V_S$) set to 9 V, and a decade resistance box as the load resistance ($R_L$) set to \SI{1}{\kilo\ohm}. Then the load voltage ($V_L$) and load current ($I_L$) was measured and recorded in Table~\ref{tab:volt_reg_meas}, for the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}. The Zener diode was removed and the open-circuit voltage ($V_{OC}$) was measured and recorded in Table~\ref{tab:volt_reg_meas}, again for the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}. The Zener diode was added back into the circuit and, using the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}, the point at which the source drops out of regulation ($V_S$ Drop) was determined and recorded in Table~\ref{tab:volt_reg_meas} by sweeping the $V_S$. Finally, the $R_L$ was removed ($R_L$=$\infty$), $V_S$ was set to 9 V, and the voltage across the Zener diode (also $V_L$) was measured and recorded in Table~\ref{tab:volt_reg_meas}.
-
+First, a \SI{47}{\ohm} resistor was measured and its \% difference from the nominal resistance value was calculated and both values were recorded in Table~\ref{tab:res}. The circuit shown in Figure~\ref{fig:volt_reg} was constructed on a breadboard, the HP power supply for the voltage source ($V_S$) set to 9 V, and a decade resistance box as the load resistance ($R_L$) set to \SI{1}{\kilo\ohm}. Then the load voltage ($V_L$) and load current ($I_L$) was measured and recorded in Table~\ref{tab:volt_reg_meas}, for the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}. The Zener diode was removed and the open-circuit voltage ($V_{OC}$) was measured and recorded in Table~\ref{tab:volt_reg_meas}, again for the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}. The Zener diode was added back into the circuit and, using the $R_L$ of \SI{1}{\kilo\ohm}, \SI{330}{\ohm}, and \SI{100}{\ohm}, the point at which the source drops out of regulation ($V_S$ drop) was determined and recorded in Table~\ref{tab:volt_reg_meas} by sweeping the $V_S$. Finally, the $R_L$ was removed ($R_L$=$\infty$), $V_S$ was set to 9 V, and the voltage across the Zener diode (also $V_L$) was measured and recorded in Table~\ref{tab:volt_reg_meas}.
 
 \section{Results}
 \label{sec:results}
@@ -203,14 +202,14 @@ First, a \SI{47}{\ohm} resistor was measured and its \% difference from the nomi
 \section{Comparison of Results}
 \label{sec:comp_of_res}
 
-The PSpice computed values of $V_{OC}$ shown in Table~\ref{tab:volt_reg_calc}, were very close to the measured $V_{OC}$ values (Table~\ref{tab:volt_reg_calc}), and were at most only 3.327\% different (Table~\ref{tab:volt_reg_diff}). Also, the PSpice computed $V_S$ Drop (Table~\ref{tab:volt_reg_calc}) was very close to the measured $V_S$ Drop (Table~\ref{tab:volt_reg_meas})and the \% difference was at most only 1.7\% (Table~\ref{tab:volt_reg_diff}) (suggesting that the experimenter may have “peaked” at the computed results and subconsciously (or consciously) noticed the recorded value to be almost exactly the same in all three circumstances).
+The PSpice computed values of $V_{OC}$ shown in Table~\ref{tab:volt_reg_calc}, were very close to the measured $V_{OC}$ values (Table~\ref{tab:volt_reg_calc}), and were at most only 3.327\% different (Table~\ref{tab:volt_reg_diff}).  Also, the PSpice computed $V_S$ drop (Table~\ref{tab:volt_reg_calc}) was very close to the measured $V_S$ drop (Table~\ref{tab:volt_reg_meas})and the \% difference was at most only 1.7\% (Table~\ref{tab:volt_reg_diff}) (suggesting that the experimenter may have “peaked” at the computed results and subconsciously (or consciously) noticed the recorded value to be almost exactly the same in all three circumstances).
 
 \section{Conclusion}
 \label{sec:conclusion}
 
-As seen in Figure~\ref{fig:rect_vp_vdc}, as the peak voltage of the rectifier circuit increases (Figure~\ref{fig:volt_rect}), the rectifier dc voltage increases. Also, as load resistance is increased on the rectifier, it decreases the \% ripple as shown in Table~\ref{tab:load_v_ripple}. This was probably because the increase of resistance reduced the amount of current that could be dissipated from the capacitor over the same amount of time before it was “charged up” again. Additionally, the \% ripple would likely decrease as the input frequency were increased because there would be a smaller time interval for the capacitor to discharge. 
+As seen in Figure~\ref{fig:rect_vp_vdc}, as the peak voltage of the rectifier circuit increases, the rectifier DC voltage increases.  Also, as load resistance is increased on the rectifier, it decreases the \% ripple as shown in Table~\ref{tab:load_v_ripple}.  This was probably because the increase of resistance reduced the amount of current that could be dissipated from the capacitor over the same amount of time before it was “charged up” again.  Additionally, the \% ripple would likely decrease as the input frequency were increased because there would be a smaller time interval for the capacitor to discharge. 
 
-As shown in Table~\ref{tab:volt_reg_meas}, the voltage regulation (calculated using Equation~\ref{eq:volt_reg}) across the \SI{100}{\ohm} resistor is 5.02\% different than the 5.38 V that was measured when the load resistor was removed from the circuit. This shows that the Zener used in the experiment is not an ideal Zener. In the regulator circuit (Figure~\ref{fig:volt_reg}), when $V_S$ is below the Zener diode voltage ($V_Z$), $V_{OC}$ is linearly related to $V_S$. When $V_S$ is above $V_Z$, $V_{OC}$ is almost at a constant value approximately equal to $V_Z$. When $V_S$ is “close” to $V_Z$, the relationship of $V_{OC}$ to $V_S$ is not linearly related and the simplified calculations we learned in class are less effective at computing the $V_{OC}$. 
+As shown in Table~\ref{tab:volt_reg_meas}, the voltage regulation (calculated using Equation~\ref{eq:volt_reg}) across the \SI{100}{\ohm} resistor is 5.02\% different than the \SI{5.38}{V} measured when the load resistor was removed from the circuit. This shows that the Zener diode used in the experiment is not an ideal Zener. In the regulator circuit (Figure~\ref{fig:volt_reg}), when $V_S$ is below the Zener diode voltage ($V_Z$), $V_{OC}$ is linearly related to $V_S$. When $V_S$ is above $V_Z$, $V_{OC}$ is almost at a constant value approximately equal to $V_Z$. When $V_S$ is “close” to $V_Z$, the relationship of $V_{OC}$ to $V_S$ is not linearly related and the simplified calculations we learned in class are less effective at computing the $V_{OC}$. 
 
 \section{Equations}
 \label{sec:equations}
@@ -222,6 +221,11 @@ As shown in Table~\ref{tab:volt_reg_meas}, the voltage regulation (calculated us
 \begin{equation}
   \label{eq:percent_diff}
   \%_{diff} = \frac{|nominal - measured|}{nominal}\times 100\%
+\end{equation}
+%
+\begin{equation}
+  \label{eq:ripple}
+  V_r = V_{max} - V_{min}
 \end{equation}
 %
 \begin{equation}
